<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppSupSMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="contact">Contact</string>
    <string name="sms">SMS</string>
    <string name="backup">BackUp</string>
    <string name="save">SAVE</string>
    <string name="recovery">RECOVERY</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="inbox">SMS INBOX</string>
    <string name="sent">SMS SENT</string>
    
    <string name="apiAbout">API Selection :</string>
    <string name="descriptionApi1About">Supinfo API allows save mode</string>
    <string name="descriptionApi2About">Supsms API allows all modes</string>
    <string name="saveAbout">Save Mode :</string>
    <string name="descriptionSaveAbout">SMS Inbox, Sent or Contact are send to our server which address is 5.135.182.173:8082</string>
	<string name="recoveryAbout">Recovery Mode :</string>
	<string name="descriptionRecoveryAbout">SMS or Contact are recovery thanks to datas contain in our server</string>
    <string name="notYetAbout">Not yet implemented :</string>
    <string name="descriptionNotYetAbout">When thread is deleted Recovery mode can\'t recover sms from the deleted thread</string>
    <string name="goBack">Go back !</string>
    <drawable name="smsHover">#FCA205</drawable>

    <color name="correct">#23F82A</color>

	
    <string name="supinfApi">SUPINFO API</string>
    <string name="supsmsApi">SUPSMS API</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
